<resources>
    <string name="app_name">shemajamebeli___</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_internally">Transfer internally</string>
    <string name="from">From</string>
    <string name="cash">/@cash</string>
    <string name="stars">****</string>
    <string name="to">To</string>
    <string name="account_number">Account Number</string>
    <string name="personal_number">Personal Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter">Enter</string>
    <string name="add_account">Add</string>
</resources>