<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbAccountNum"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="account number"/>
        <RadioButton
            android:id="@+id/rbPersonalNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="personal number"/>
        <RadioButton
            android:id="@+id/rbMobileNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="mobile number"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAccountNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:hint="@string/account_number"/>

    <EditText
        android:id="@+id/etPersonalNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:visibility="gone"
        android:hint="@string/personal_number"/>

    <EditText
        android:id="@+id/etMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:visibility="gone"
        android:hint="@string/mobile_number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>