<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.transaction.TransactionFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/transfer_internally"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <View
        android:id="@+id/vFromAcc"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_border"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/vFromAcc"
        app:layout_constraintStart_toStartOf="@+id/vFromAcc"
        app:layout_constraintTop_toTopOf="@+id/vFromAcc"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/cash"
        app:layout_constraintStart_toEndOf="@+id/ivIcon"
        app:layout_constraintTop_toTopOf="@+id/ivIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="350"
        app:layout_constraintBottom_toBottomOf="@+id/ivIcon"
        app:layout_constraintStart_toEndOf="@+id/ivIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvValute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="$"
        app:layout_constraintStart_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toTopOf="@+id/tvAmount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccNum"
        app:layout_constraintEnd_toStartOf="@+id/tvAccNum"
        app:layout_constraintTop_toTopOf="@+id/tvAccNum" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="2345"
        app:layout_constraintBottom_toBottomOf="@+id/vFromAcc"
        app:layout_constraintEnd_toEndOf="@+id/vFromAcc"
        app:layout_constraintTop_toTopOf="@+id/vFromAcc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:text="@string/to"
        app:layout_constraintEnd_toEndOf="@+id/vFromAcc"
        app:layout_constraintStart_toStartOf="@+id/vFromAcc"
        app:layout_constraintTop_toBottomOf="@+id/vFromAcc" />

    <View
        android:id="@+id/vToAcc"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_border"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/vToAcc"
        app:layout_constraintStart_toStartOf="@+id/vToAcc"
        app:layout_constraintTop_toTopOf="@+id/vToAcc"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="350"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView7"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="1234"
        app:layout_constraintBottom_toBottomOf="@+id/vToAcc"
        app:layout_constraintEnd_toEndOf="@+id/vToAcc"
        app:layout_constraintTop_toTopOf="@+id/vToAcc" />
</androidx.constraintlayout.widget.ConstraintLayout>